[package]
name = "vl53l1x-async"
version = "0.1.0"
authors = ["Witold Lipieta <witek103@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async I2C driver for STMicroelectronics VL53L1X Time-of-Flight ranging sensor."
keywords = ["vl53l1x", "i2c", "driver"]
categories = ["no-std", "embedded"]
repository = "https://github.com/witek103/vl53l1x-rs"
readme = "README.md"

[dependencies]
embedded-hal-async = "1.0.0"
